@@ -32,7 +32,7 @@ AC_PROG_F77
 AC_PROG_EGREP
 FCFLAGS=$glimmer_FCFLAGS
 FFLAGS=$glimmer_FFLAGS
-AC_LANG_PUSH(Fortran)
+AC_LANG(Fortran)
 AC_FC_SRCEXT(f90)
 # which Fortran compiler are we running?
 AC_MSG_CHECKING([which fortran compiler])
@@ -80,31 +80,33 @@ dnl Checking for python
 AM_PATH_PYTHON([2.3],,[AC_MSG_RESULT(need at least python 2.3)])
 
 # checking for BLAS library
-AC_ARG_WITH(blas,AS_HELP_STRING([--with-blas],[how to link external BLAS library]),[ac_cv_blas=$withval])
-ac_cv_haveblas=0
-if test "$ac_cv_blas" != ""; then
-  LIBS="$LIBS $ac_cv_blas"
-  AC_MSG_CHECKING([for external BLAS lib])
-  AC_LINK_IFELSE([AC_LANG_PROGRAM([],[f=ddot(1,1.,1.,1.,1.)])],ac_cv_haveblas=1,ac_cv_haveblas=0)
-  if test "$ac_cv_haveblas" == 1; then
-    AC_MSG_RESULT([yes])
-  else
-    AC_MSG_RESULT([no])
-  fi
-fi
-AM_CONDITIONAL(EXT_BLAS,test "$ac_cv_haveblas" == 1)
+ac_gl_have_blas=0
+ACX_BLAS([ac_gl_have_blas=1])
+AM_CONDITIONAL(EXT_BLAS,test "$ac_gl_have_blas" == 1)
 
 # checking for netCDF
 AC_ARG_WITH(netcdf,AS_HELP_STRING([--with-netcdf],[location where netCDF is installed]),[ac_cv_netcdf_prefix=$withval])
 if test "$ac_cv_netcdf_prefix" != ""; then
   AC_MSG_RESULT(netCDF location: $ac_cv_netcdf_prefix)
-  FCFLAGS="$FCFLAGS $f95_moduleinclude$ac_cv_netcdf_prefix/include"
+  NETCDF_FCFLAGS="$f95_moduleinclude$ac_cv_netcdf_prefix/include"
+  FCFLAGS="$FCFLAGS $NETCDF_FCFLAGS"
   LDFLAGS="$LDFLAGS -L$ac_cv_netcdf_prefix/lib"
 fi
-AC_CHECK_LIB(netcdf,NF_INQ_LIBVERS)
+# check for netCDF C library
+save_LIBS=$LIBS
+LIBS=""
+AC_LANG_PUSH(C)
+AC_CHECK_LIB(netcdf,nc_inq_libvers,[],[AC_MSG_ERROR(cannot find netCDF library)])
+AC_LANG_POP(C)
+# checking for the fortran netCDF library
+AC_SEARCH_LIBS(NF_INQ_LIBVERS,netcdff,[],[AC_MSG_ERROR(cannot find netCDF fortran library)],[-lnetcdf])
+# check for f90 interface
 AC_MSG_CHECKING([for f90 netCDF interface])
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],[use netcdf])],AC_MSG_RESULT([yes]),AC_MSG_FAILURE([no]))
-#AC_LANG_POP(Fortran)
+NETCDF_LIBS=$LIBS
+LIBS=$save_LIBS
+AC_SUBST(NETCDF_LIBS)
+AC_SUBST(NETCDF_FCFLAGS)
 
 # checking for ENMABAL
 AC_ARG_WITH(enmabal,AS_HELP_STRING([--with-enmabal],[location ENMABAL library]),[ac_cv_enmabal_prefix=$withval])
@@ -117,7 +119,6 @@ if test "$ac_cv_enmabal_prefix" != ""; then
   AC_MSG_CHECKING([for f90 ENMABAL interface])
   AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],[use smb_mecons])],AC_MSG_RESULT([yes]),AC_MSG_FAILURE([no]))
 fi
-AC_LANG_POP(Fortran)
 
 # some options
 AC_MSG_CHECKING([whether profilng is enabled])
